--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.jcalendar-1.4.jar=C:\\Users\\BRISEIDA\\Downloads\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.16-bin.jar=C:\\Users\\BRISEIDA\\Downloads\\mysql-connector-java-5.1.16-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\alore\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\BRISEIDA\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
