--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,39 @@ dist.jar=${dist.dir}/Cementera.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.appframework-1.0.3.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\appframework-1.0.3.jar
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\commons-collections-3.2.1.jar
+file.reference.commons-digester-1.7.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\commons-digester-1.7.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\commons-logging-1.1.jar
+file.reference.groovy-all-1.5.5.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\groovy-all-1.5.5.jar
+file.reference.hsqldb.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\hsqldb.jar
+file.reference.iText-2.1.0.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\iText-2.1.0.jar
+file.reference.jasperreports-6.0.0.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\jasperreports-6.0.0.jar
 file.reference.jcalendar-1.4.jar=D:\\Descargas\\Ejecutables o Instaladores\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.16-bin.jar=D:\\Documentos\\Univercidad\\Administracion de datos\\JavaSql\\mysql-connector-java-5.1.16-bin.jar
+file.reference.mysql-connector-java-5.1.16-bin.jar-1=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\mysql-connector-java-5.1.16-bin.jar
+file.reference.substance.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\substance.jar
+file.reference.swing-worker-1.1.jar=C:\\Users\\alore\\OneDrive\\Escritorio\\Librerias reporte\\swing-worker-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.16-bin.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.appframework-1.0.3.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-1.5.5.jar}:\
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.iText-2.1.0.jar}:\
+    ${file.reference.jasperreports-6.0.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.16-bin.jar-1}:\
+    ${file.reference.substance.jar}:\
+    ${file.reference.swing-worker-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
