--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ file.reference.jcalendar-1.4.jar=D:\\Documentos\\NetBeansProjects\\Cementera\\sr
 file.reference.mysql-connector-java-5.1.16-bin.jar=D:\\Documentos\\NetBeansProjects\\Cementera\\src\\librerias\\mysql-connector-java-5.1.16-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\alore\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\acer\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
