--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -19,8 +19,12 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
@@ -29,17 +33,45 @@ dist.jar=${dist.dir}/Cementera.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.appframework-1.0.3.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\appframework-1.0.3.jar
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\commons-collections-3.2.1.jar
+file.reference.commons-digester-1.7.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\commons-digester-1.7.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\commons-logging-1.1.jar
+file.reference.groovy-all-1.5.5.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\groovy-all-1.5.5.jar
+file.reference.hsqldb.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\hsqldb.jar
+file.reference.iText-2.1.0.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\iText-2.1.0.jar
+file.reference.jasperreports-6.0.0.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\jasperreports-6.0.0.jar
 file.reference.jcalendar-1.4.jar=D:\\Descargas\\Ejecutables o Instaladores\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.16-bin.jar=D:\\Documentos\\Univercidad\\Administracion de datos\\JavaSql\\mysql-connector-java-5.1.16-bin.jar
+file.reference.mysql-connector-java-5.1.16-bin.jar-1=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\mysql-connector-java-5.1.16-bin.jar
+file.reference.substance.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\substance.jar
+file.reference.swing-worker-1.1.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\swing-worker-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.16-bin.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.appframework-1.0.3.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-1.5.5.jar}:\
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.iText-2.1.0.jar}:\
+    ${file.reference.jasperreports-6.0.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.16-bin.jar-1}:\
+    ${file.reference.substance.jar}:\
+    ${file.reference.swing-worker-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -47,6 +79,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -72,9 +106,13 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
