--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,19 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.appframework-1.0.3.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\appframework-1.0.3.jar
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\commons-collections-3.2.1.jar
+file.reference.commons-digester-1.7.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\commons-digester-1.7.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\commons-logging-1.1.jar
+file.reference.groovy-all-1.5.5.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\groovy-all-1.5.5.jar
+file.reference.hsqldb.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\hsqldb.jar
+file.reference.iText-2.1.0.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\iText-2.1.0.jar
+file.reference.jasperreports-6.0.0.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\jasperreports-6.0.0.jar
+file.reference.mysql-connector-java-5.1.16-bin.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\mysql-connector-java-5.1.16-bin.jar
+file.reference.substance.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\substance.jar
+file.reference.swing-worker-1.1.jar=C:\\Users\\BRISEIDA\\Downloads\\Librerias reporte\\swing-worker-1.1.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\alore\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\BRISEIDA\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
