--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -57,7 +57,8 @@ javac.classpath=\
     ${file.reference.jasperreports-6.0.0.jar}:\
     ${file.reference.mysql-connector-java-5.1.16-bin.jar}:\
     ${file.reference.substance.jar}:\
-    ${file.reference.swing-worker-1.1.jar}
+    ${file.reference.swing-worker-1.1.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
